<resources>
    <string name="app_name">Venus</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="register_name">Nombre</string>
    <string name="register_email">Correo Electronico</string>
    <string name="register_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="input_date">Fecha</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_appoinment">Citas</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_maps">Map</string>
</resources>
