<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.adrianm.myapplication.Register"
    tools:showIn="@layout/activity_register">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingTop="56dp"
          android:paddingLeft="24dp"
          android:paddingRight="24dp">

          <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp">

          <EditText
              android:id="@+id/register_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/register_name"
              android:inputType="text"
              android:maxLines="1"
              android:singleLine="true" />

          </android.support.design.widget.TextInputLayout>

          <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp">

              <EditText
                  android:id="@+id/register_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/register_email"
                  android:inputType="textEmailAddress"
                  android:maxLines="1"
                  android:singleLine="true"/>


          </android.support.design.widget.TextInputLayout>

          <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp">

              <EditText
                  android:id="@+id/register_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/register_password"
                  android:inputType="textEmailAddress"
                  android:maxLines="1"
                  android:singleLine="true"/>


          </android.support.design.widget.TextInputLayout>

          <android.support.v7.widget.AppCompatButton
              android:id="@+id/btn_signup"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:layout_marginBottom="24dp"
              android:padding="12dp"
              android:text="Crear Cuenta"
              android:background="@color/primary_dark"
              android:textColor="#ffffff"
              android:textColorHint="#ffffff" />

          <TextView android:id="@+id/link_login"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:text="Inicia Sesion"
              android:gravity="center"
              android:textSize="16dip"/>



      </LinearLayout>

  </ScrollView>


</LinearLayout>
